# Oldspeak-Classical-Chinese-Collocation-Dictionary

./: .gitignore  README.md
API/: README.md
API/myapp/: Dockerfile  docker-compose.yaml  pyproject.toml
API/myapp/myapp/: main.py
Database/: create_tables.sql  insert_data.ipynb
NLP/: main.ipynb
NLP/public/其他/: 笑林广记 笑话 近古 散文.txt
NLP/public/历史类/: 史记 历史 中古 散文.txt
NLP/public/子类/: 孟子 子类 上古 散文.txt  论语 子类 上古 散文.txt
NLP/public/小说类/: 三国演义 小说 近古 小说.txt
NLP/public/诗词曲/: 乐府诗集 诗歌 中古 乐府诗.txt
